--- a/index2.html
+++ b/index2.html
@@ -106,7 +106,7 @@
 
     <!-- Footer -->
     <footer class="pt1 pb1 bg--gray align--center">
-        <p class="small">&copy; 2019 Huddle</p>
+        <p class="small">&copy; 2019 Junior Dev</p>
     </footer>
 
 </div><!-- bg--white -->
