--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <title>Huddle</title>
+        <title>Junior Dev</title>
         <meta name="description" content="">
 
         <!-- The compiled CSS file -->
@@ -32,7 +32,7 @@
         <!-- Header -->
         <header class="align--center pt3 pb2">
             <div class="container">
-                <h1 class="mb3 reveal-on-scroll is-revealing" title="Huddle"><img src="img/logo.svg" alt="Huddle"></h1>
+                <h1 class="mb3 reveal-on-scroll is-revealing" title="Junior Dev"><img src="img/logo.svg" alt="Junior Dev"></h1>
                 <h2 class="mb3 reveal-on-scroll is-revealing">Unleashing the Coding Potential in Young Minds</h2>
                 <p class="mb1">Introduction to programming</p>
                 <p>Coding Course for kids from age 10 to 18</p>
@@ -45,7 +45,7 @@
 
                 <!-- Info -->
                 <section class="pt2 pb3">                    
-                    <img class="mb3" src="img/presentor.jpg" alt="Huddle presentation">
+                    <img class="mb3" src="img/presentor.jpg" alt="Junior Dev presentation">
                     <div class="grid-row">
                         <div class="grid-column span-one-third mt1 reveal-on-scroll is-revealing">
                             <img class="icon mb1" src="img/bucket.svg">
