--- a/ui.html
+++ b/ui.html
@@ -8,7 +8,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <title>Huddle</title>
+        <title>Junior Dev</title>
         <meta name="description" content="">
 
         <!-- The compiled CSS file -->
