--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 <section class="align--center pt3 pb3">
                     <p class="h3 mb2 reveal-on-scroll is-revealing">To know more, contact us or have a look at our brochure</p>
                     <a href="img/junior_dev_brochure.pdf" target="_blank" class="btn btn--outline reveal-on-scroll is-revealing">Download Brochure</a>
-                    <a href="tel:+91-974-733-2795" class="btn btn--default reveal-on-scroll is-revealing">Contact Us</a>
-                    <p><a href="tel:+91-974-733-2795">mob: 9747332795</a></p>
-                    <p>email: amalragc@gmail.com</p>
+                    <a href="tel:+91-790-783-7428" class="btn btn--default reveal-on-scroll is-revealing">Contact Us</a>
+                    <p><a href="tel:+91-974-733-2795">mob: 7907837428</a></p>
+                    <p>email: charlsjohn999@gmail.com</p>
                 </section>
 
             </div>
